# dino

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
containers/: dino-dev.def  dino.def  finetuning.def
experiments/: datasets.py  experiments.py  knn_debug.py
experiments/logs/: knn-eval-dino-facebook-1589957.out  knn-eval-dino-pretrained-1590017.out  knn-eval-dino-random-1590018.out
experiments/logs/imagenet-kaggle/: deit.out  resnet.err  resnet.out
experiments/logs/imagenet100/: deit.out  resnet.out
experiments/logs/imagenette2/: deit.out  resnet.err  resnet.out
scripts/: __init__.py  dataset_analysis.sh  experiments.sh  experiments_milestone2.sh  experiments_milestone3.sh  finetune.sh  job.sh  knn_imagenette_dino_s.sh  knn_imagenette_dino_s_facebook.sh  knn_imagenette_dino_s_random.sh  loss_plots.py  loss_plots_ms1.py  plot_augmentations_entropy.py  plot_local_view_crop_scale_entropy.py  plot_model_collapse_entropy_kl_divergence.py  plot_number_local_views_accuracy.py  plot_simclr_accuracy.py  plot_student_teacher_accuary.py  simclr.sh  teacher_momentum_training_dynamics.py  test.py  utils.py
src/dino/: __init__.py  __main__.py  augmentation.py  config.py  data.py  dataset_analysis.py  datasets.py  evaluators.py  finetuning.py  loss.py  models.py  simclr.py  trainer.py  utils.py  visualize.py
src/dino/conf/: config.yaml  evaluation_config.yaml  train_config.yaml
src/dino/conf/backbone/: resent_imagenet.yaml  vit_deit_imagenet.yaml  vit_dino_s.yaml  vit_s.yaml
src/dino/conf/dataset/: cifar.yaml  custom_imagenet.yaml  imagenet.yaml  tiny_imagenet.yaml
src/dino/conf/evaluate/: knn.yaml  linear.yaml
src/dino/conf/finetune/: default.yaml  standard.yaml
src/dino/conf/head/: linear.yaml  linear_pretrained_custom.yaml  mlp.yaml
src/dino/conf/train/: default.yaml
src/dino/entry_points/: evaluate.py  evaluation.py  finetune.py  simclr.py  train.py
src/dino/evaluation/: evaluators.py  knn_evaluator.py  linear_evaluator.py
src/dino/models/: dino_vision_transformer.py  model_heads.py
src/dino/utils/: random.py  schedulers.py  torch.py
src/finetuning/: dataset.py  datasets.py  experiments.py  iterate_dataset.py  load_dataset.py
tests/: conftest.py  test_dataset.py  test_knn_evaluator.py  test_linear_evaluator.py  test_models.py  test_schedulers.py  test_version.py
