[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dino"
version = "0.0.1"
authors = [
    { name = "Conrad Dobberstein" },
    { name = "Philipp von Mengersen" },
    { name = "Georgios Zountsas" },
]
description = 'Implementations of the DINO Framwork from "Emerging Properties in Self-Supervised Vision Transformers"'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["knowledge distillation with no labels", "self-supervised learning", "deep learning", "computer vision"]
dependencies = [
    "torch~=2.5.0",
]

[project.urls]
"Repository" = "https://github.com/dobbersc/dino"
